# lets_be_rational

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  pyproject.toml  setup.py
.github/workflows/: pip.yml  python-publish.yml  wheels.yml
src/: export.cpp  export.h
src/include/: lets_be_rational.h  normal_distribution.h  rational_cubic.h
src/lets_be_rational/: implied_volatility.py
src/lets_be_rational/utils/: data_format.py
src/py_lets_be_rational/: __init__.py
src/src/: erf_cody.cpp  lets_be_rational.cpp  normal_distribution.cpp  rational_cubic.cpp
tests/: test_implied_volatility.py
